--- a/Objects/HW4.build_log.htm
+++ b/Objects/HW4.build_log.htm
@@ -19,12 +19,13 @@ CPU DLL:         S8051.DLL V3.113.0.0
 Dialog DLL:      DP51.DLL V2.64.0.0 
 <h2>Project:</h2>
 C:\Users\Admin\Google ¶³ºÝµwºÐ\³æ´¹¤ù±±¨î\HW4\HW4.uvproj
-Project File Date:  12/10/2017
+Project File Date:  12/12/2017
 
 <h2>Output:</h2>
 Build target 'Target 1'
 linking...
-Program Size: data=8.0 xdata=0 code=299
+Program Size: data=8.0 xdata=0 code=10
+creating hex file from ".\Objects\HW4"...
 ".\Objects\HW4" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
