--- a/Objects/HW4.build_log.htm
+++ b/Objects/HW4.build_log.htm
@@ -23,9 +23,9 @@ Project File Date:  12/16/2017
 
 <h2>Output:</h2>
 Build target 'Target 1'
-assembling HW4_ASM_commonpositive.asm...
+assembling HW4_ASM_2.asm...
 linking...
-Program Size: data=8.0 xdata=0 code=429
+Program Size: data=8.0 xdata=0 code=524
 creating hex file from ".\Objects\HW4"...
 ".\Objects\HW4" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:01
